# energizer

./: .gitignore  LICENSE  README.md  _config.yml  index.html  pyproject.toml  requirements.txt  update_version.py
.github/workflows/: lint.yml
energizer/: __init__.py  _mlx.py  autograd.py  backend.py  derivatives.py  function.py  functionnal.py  neural_network.py  tensor.py
energizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
energizer/backpack/: __init__.py  monitor.py  runner.py
energizer/backpack/compiler/: bouncer.py  tracer.py  transpiler.py
energizer/coreml/: tracer.py  transpiler.py
energizer/distributed/: __init__.py  comm.py  monitor.py  parallel.py  telemetry.py  world.py
energizer/distributed/cluster/: __init__.py  device.py  manager.py
energizer/layers/: autoencoder.py  batch_norm.py  conv.py  convtranspose.py  dropout.py  embedding.py  flatten.py  gelu.py  init.py  layer_norm.py  linear.py  loss.py  modulelist.py  pool.py  relu.py  reshape.py  residual.py  sequential.py  sigmoid.py  tanh.py  transformer.py  trim.py
energizer/optimizer/: adam.py  sgd.py
src/: analyzer.py  generator.py
tests/: test_as_strided.py  test_avgpool2d.py  test_backpack_extended_integration.py  test_backpack_integration.py  test_backpack_transformer_ir.py  test_bouncer.py  test_conv1d.py  test_distributed.py  test_distributed_monitor.py  test_linear.py  test_local_monitor_single_node.py  test_maxpool2d.py  test_operators.py  test_tracer.py
